--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "download:cid": "mkdir -p public/data/cid && wget https://standards-oui.ieee.org/cid/cid.csv -O public/data/cid/cid.csv",
+    "download:iab": "mkdir -p public/data/iab && wget https://standards-oui.ieee.org/iab/iab.csv -O public/data/iab/iab.csv",
+    "download:oui": "mkdir -p public/data/oui && wget https://standards-oui.ieee.org/oui/oui.csv -O public/data/oui/oui.csv",
+    "download:oui28": "mkdir -p public/data/oui28 && wget https://standards-oui.ieee.org/oui28/mam.csv -O public/data/oui28/mam.csv",
+    "download:oui36": "mkdir -p public/data/oui36 && wget https://standards-oui.ieee.org/oui36/oui36.csv -O public/data/oui36/oui36.csv",
+    "download": "run-p download:*"
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
+    "csvtojson": "^2.0.10",
     "naive-ui": "^2.37.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
