--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,43 +8,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-        - name: Install Node.js
-          uses: actions/setup-node@v4
-          with:
-            node-version: 20
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          run_install: false
 
-        - uses: pnpm/action-setup@v3
-          name: Install pnpm
-          with:
-            version: 8
-            run_install: false
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
-        - name: Get pnpm store directory
-          shell: bash
-          run: |
-            echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - name: Install dependencies
+        run: pnpm install
 
-        - uses: actions/cache@v4
-          name: Setup pnpm cache
-          with:
-            path: ${{ env.STORE_PATH }}
-            key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-            restore-keys: |
-              ${{ runner.os }}-pnpm-store-
+      - name: Build site
+        run: pnpm run build
 
-        - name: Install dependencies
-          run: pnpm install
-
-        - name: Build site
-          run: pnpm run build
-
-        - name: Upload artifact
-          uses: actions/upload-artifact@v4
-          with:
-            name: dist
-            path: dist
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist
